Made clean up adjustments, bold text using Oswald font no longer look blurry, top nav bar and main four column buttons have a better adjusted max size to avoid looking comically large on standard 1080p displays as well as larger ones (tested on a 2k monitor as well and the size looks appropriate), fixed page content jankedly moving around in contexts where a screen size switches between no scroll bar and having a visible scrollbar, added hovering animation to main four buttons on the start screen. Will add a hovering effect to the top nav bar buttons as well, will continue making adjustments now

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@400;700&display=swap');
+
+html {
+  width: 100%;
+  width: 100vw;
+}
 
 body {
   margin: 0;
@@ -428,7 +433,7 @@ code {
 }
 
 .navIcon {
-  max-width: 50% !important;
+  max-width: 20% !important;
   padding: 1% !important;
   filter: drop-shadow(3px 3px 5px rgba(0,0,0,0.3));
   /* cursor: pointer; */
@@ -445,11 +450,18 @@ code {
 .aboutMeAnimation, .portfolioAnimation, .contactAnimation, .resumeAnimation {
   cursor: pointer;
   margin: 1rem;
-  max-width: 351px !important;
+  max-width: 265px !important;
   margin-left: 0.5rem;
   margin-right: 0.5rem;
   filter: drop-shadow(6.7px 6.7px 5.3px rgba(0,0,0,0.3));
-  
+}
+
+.hoverFX {
+  transition: .4s ease;
+}
+
+.hoverFX:hover {
+  scale: 1.1;
 }
 
 .navTransition {
@@ -676,16 +688,16 @@ code {
 
 .githubText {
   font-size: 1.5rem;
-  padding: 5px;
+  padding: 0px 5px 4px 5px;
   border-radius: 0.5rem;
   color: #fff !important;
   background-color: #2B52C1;
   text-shadow: 0px 1px 2px rgba(0, 0, 0, .8);
   text-decoration: none;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, .8);
-  font-weight: bold;
+  /* font-weight: bold; */
   transition: all 0.4s ease-in-out;
-  padding-bottom: 0.5rem;
+  /* padding-bottom: 0.5rem; */
 }
 
 .githubText:hover {
@@ -804,9 +816,10 @@ code {
   text-shadow: 0px 1px 2px rgba(0, 0, 0, .8);
   text-decoration: none;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, .8);
-  font-weight: bold;
+  /* font-weight: bold; */
   transition: all 0.4s ease-in-out;
   margin-bottom: -1rem;
+  padding-bottom: 0.2rem;
   border: none;
 }
 
